fix last illegal argument